--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=cat,ES
+spring.profiles.active=cat,ES,dev
+guru.username=superUser
+guru.password=dbpassword
+guru.jdbcurl=someUrlForDb
